--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <title>Webpack</title>
 </head>
 <body>
     <div class="container">
-        <h1>Webpack course</h>
+        <h1>Webpack course</h1>
+        <hr>
+        <div class="logo"></div>
+        <hr>
+        <pre></pre>
+        <hr>
+        <div class="box">
+            <h2>Less</h2>
+        </div>
+
+        <div class="card">
+            <h2>Sass</h2>
+        </div>
     </div>
 </body>
 </html>
